chap11/discuss1.txt
Christinas-iMac:zelle DanYoung$ import string
bash: import: command not found
Christinas-iMac:zelle DanYoung$ python import string
(null): can't open file 'import': [Errno 2] No such file or directory
Christinas-iMac:zelle DanYoung$ python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 26 2018, 23:26:24)
[Clang 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import string
>>> s1 = [2,1,4,3]
>>> s2 = ['c','a','b']
>>> s1 + s2
[2, 1, 4, 3, 'c', 'a', 'b']
>>> 3 * s1 + 2 * s2
[2, 1, 4, 3, 2, 1, 4, 3, 2, 1, 4, 3, 'c', 'a', 'b', 'c', 'a', 'b']
>>> s1[1]
1
>>> s1[1:3]
[1, 4]
>>> s1 + s2[-1]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate list (not "str") to list
>>> sl.append[s2[-1]]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sl' is not defined
>>> s1.append[s2[-1]
... }
  File "<stdin>", line 2
    }
    ^
SyntaxError: invalid syntax
>>> s1.append[s2[-1]]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> s1.append(s2[-1])
>>> s1
[2, 1, 4, 3, 'b']
>>>